use smaller dialog width on mobile to prevent clipping

--- a/portfolio/src/scss/portfolio/_lang-selector.scss
+++ b/portfolio/src/scss/portfolio/_lang-selector.scss
@@ -53,8 +53,12 @@
   }
 
   &__prompt {
-    width: 23.8em;
+    width: 13em;
     padding: 1em;
+
+    @include breakpoint($small) {
+      width: 23.8em;
+    }
   }
  }
 
